# AICAM2

./: README.md  gradle.properties  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/nanodetncnn/: DetectionOverlayView.java  MainActivity.java  NanoDetNcnn.java  ScreenDetectService.java
app/src/main/jni/: CMakeLists.txt  nanodetncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml  styles.xml
